# inquisitive

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  database.py  main.py  vector_store.py
backend/api/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/auth/: dependencies.py  models.py  process_uploaded_file.py  router.py  schemas.py  service.py  url_processor.py  url_processor_recursive.py
backend/core/: logging.py  utils.py
backend/vector_store/: adapter.py  chroma_db.py  lance_db.py  milvus_db.py  models.py
backend/worker/: process_uploaded_file.py  url_processor.py  url_processor_recursive.py
frontend/: app.py  auth_page.py  config.py  streamlit_context_aware.py  streamlit_ui.py  utils.py
frontend/streamlit_component/easymde/: __init__.py
frontend/streamlit_component/easymde/frontend/: package-lock.json  package.json
frontend/streamlit_component/easymde/frontend/public/: index.html
frontend/streamlit_component/easymde/frontend/src/: SimpleMDEComponent.tsx  index.tsx
start/: launcher.py  start.sh
